[codemonkey] Fixed 21+ compiler warnings
- PSEntrySet.java: Added missing m_key and m_value field declarations
- PSBrandCodeMapVersion.java: Added //noinspection FallThroughInSwitchStatement for fallthrough warnings
- PSPurgableTempFile.java: Made m_contentProperties transient for Serializable
- PSBaseException.java: Made m_bundle and m_args transient for Serializable
- PSXmlTreeWalker.java: Made m_doc, m_root, m_cur transient for Serializable
- ConnectorConfigurationException.java: Made m_args transient for Serializable
- PSSqlHelper.java: Replaced deprecated new Float() with Float.valueOf()
- PSAbstractConnector.java: Added @SuppressWarnings for rawtypes, fixed SCHEME_HTTPS reference
- PSJexlEvaluator.java: Added @SuppressWarnings for rawtypes
- PSNamingContextHelper.java: Added @SuppressWarnings for rawtypes
- PSOrganizeProperties.java: Added @SuppressWarnings for rawtypes
- PSParseArguments.java: Added @SuppressWarnings for rawtypes